# RNN_tutorial

./: .gitignore  README.md  pyproject.toml
src/rnn_excersise/: __init__.py  data.py  logger_config.json  main.py  model.py  plot.py  predict.py  run.sh  train.py
src/rnn_excersise/notebooks/: 20240710_勉強会_RNN_演習_人名2性別.ipynb  anime.ipynb
src/rnn_tutorial/: 20240710_勉強会_RNN_演習.ipynb  __init__.py
src/rnn_tutorial/tutuorial/: 20240710_勉強会_RNN.ipynb  char-rnn-classification.ipynb  data.py  predict.py  server.py  train.py
