[project]
name = "rnn-tutorial"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "torch>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rnn_tutorial"]
