[project]
dependencies = [
    "torch==1.10.1+cu111",
    "torchvision==0.11.2+cu111",
    "torchaudio==0.10.1",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "matplotlib>=3.9.0",
    "kaggle>=1.6.14",
    "pandas>=2.2.2",
    "numpy==1.26.4",
    "rich>=13.7.1",
]
name = "rnn-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["setuptools==69.5.1", "packaging>=24.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rnn_tutorial"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"
